@@ -18,6 +18,8 @@ import net.minecraft.text.MutableText;
 import net.minecraft.text.Text;
 import net.minecraft.util.Formatting;
 
+import static com.mojang.brigadier.Command.SINGLE_SUCCESS;
+
 public class CommandsCommand extends Command {
     public CommandsCommand() {
         super("commands", "List of all commands.", "help");
@@ -43,12 +45,12 @@ public class CommandsCommand extends Command {
         tooltip.append(Text.literal(Utils.nameToTitle(command.getName())).formatted(Formatting.BLUE, Formatting.BOLD)).append("\n");
 
         MutableText aliases = Text.literal(Config.get().prefix.get() + command.getName());
-        if (!command.getAliases().isEmpty()) {
+        if (command.getAliases().size() > 0) {
             aliases.append(", ");
             for (String alias : command.getAliases()) {
                 if (alias.isEmpty()) continue;
                 aliases.append(Config.get().prefix.get() + alias);
-                if (!alias.equals(command.getAliases().getLast())) aliases.append(", ");
+                if (!alias.equals(command.getAliases().get(command.getAliases().size() - 1))) aliases.append(", ");
             }
         }
         tooltip.append(aliases.formatted(Formatting.GRAY)).append("\n\n");
@@ -57,12 +59,12 @@ public class CommandsCommand extends Command {
 
         // Text
         MutableText text = Text.literal(Utils.nameToTitle(command.getName()));
-        if (command != Commands.COMMANDS.getLast())
+        if (command != Commands.COMMANDS.get(Commands.COMMANDS.size() - 1))
             text.append(Text.literal(", ").formatted(Formatting.GRAY));
         text.setStyle(text
             .getStyle()
-            .withHoverEvent(new HoverEvent.ShowText(tooltip))
-            .withClickEvent(new ClickEvent.SuggestCommand(Config.get().prefix.get() + command.getName()))
+            .withHoverEvent(new HoverEvent(HoverEvent.Action.SHOW_TEXT, tooltip))
+            .withClickEvent(new ClickEvent(ClickEvent.Action.SUGGEST_COMMAND, Config.get().prefix.get() + command.getName()))
         );
 
         return text;
