@@ -8,36 +8,32 @@ package meteordevelopment.meteorclient.mixin;
 import meteordevelopment.meteorclient.systems.config.Config;
 import net.minecraft.client.gui.screen.SplashTextRenderer;
 import net.minecraft.client.resource.SplashTextResourceSupplier;
-import net.minecraft.text.Text;
 import org.spongepowered.asm.mixin.Mixin;
-import org.spongepowered.asm.mixin.Unique;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
 
 @Mixin(SplashTextResourceSupplier.class)
-public abstract class SplashTextResourceSupplierMixin {
-    @Unique
+public class SplashTextResourceSupplierMixin {
     private boolean override = true;
-    @Unique
-    private static final Random random = new Random();
-    @Unique
+    private final Random random = new Random();
+
     private final List<String> meteorSplashes = getMeteorSplashes();
 
     @Inject(method = "get", at = @At("HEAD"), cancellable = true)
     private void onApply(CallbackInfoReturnable<SplashTextRenderer> cir) {
         if (Config.get() == null || !Config.get().titleScreenSplashes.get()) return;
 
-        if (override) cir.setReturnValue(new SplashTextRenderer(Text.literal(meteorSplashes.get(random.nextInt(meteorSplashes.size())))));
+        if (override) cir.setReturnValue(new SplashTextRenderer(meteorSplashes.get(random.nextInt(meteorSplashes.size()))));
         override = !override;
     }
 
-    @Unique
     private static List<String> getMeteorSplashes() {
-        return List.of(
+        return Arrays.asList(
                 "Meteor on Crack!",
                 "Star Meteor Client on GitHub!",
                 "Based utility mod.",
